[gd_scene load_steps=5 format=3 uid="uid://dfreju6ut7m6n"]

[ext_resource type="Texture2D" uid="uid://d4ejwomucd3fd" path="res://assets/PixelPhoneScreenLayout.png" id="1_him6g"]
[ext_resource type="Script" path="res://scripts/AndroidPlayerScene.gd" id="1_rjg56"]
[ext_resource type="PackedScene" uid="uid://b38rk8wit5rg4" path="res://GameScene.tscn" id="3_f2vdv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y1tmr"]
radius = 22.0

[node name="AndroidPlayer" type="Node2D"]
script = ExtResource("1_rjg56")

[node name="BackgroundImage" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_him6g")

[node name="ScreenDisplayLocation" type="Node2D" parent="."]
position = Vector2(50, 112)

[node name="SubViewportContainer" type="SubViewportContainer" parent="ScreenDisplayLocation"]
offset_right = 160.0
offset_bottom = 144.0

[node name="SubViewport" type="SubViewport" parent="ScreenDisplayLocation/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(160, 144)
render_target_update_mode = 4

[node name="GameScene" parent="ScreenDisplayLocation/SubViewportContainer/SubViewport" instance=ExtResource("3_f2vdv")]

[node name="TouchScreenButtonA" type="TouchScreenButton" parent="."]
top_level = true
position = Vector2(222, 348)
shape = SubResource("CircleShape2D_y1tmr")
action = "ui_accept"

[node name="TouchScreenButtonB" type="TouchScreenButton" parent="."]
top_level = true
position = Vector2(180.675, 376.575)
shape = SubResource("CircleShape2D_y1tmr")
action = "ui_accept"

[node name="TouchScreenButtonUP" type="TouchScreenButton" parent="."]
top_level = true
position = Vector2(55, 335)
shape = SubResource("CircleShape2D_y1tmr")
action = "ui_accept"

[node name="TouchScreenButtonDOWN" type="TouchScreenButton" parent="."]
top_level = true
position = Vector2(56, 404)
shape = SubResource("CircleShape2D_y1tmr")
action = "ui_accept"

[node name="TouchScreenButtonLEFT" type="TouchScreenButton" parent="."]
top_level = true
position = Vector2(28, 370)
shape = SubResource("CircleShape2D_y1tmr")
action = "ui_accept"

[node name="TouchScreenButtonRIGHT" type="TouchScreenButton" parent="."]
top_level = true
position = Vector2(82, 369)
shape = SubResource("CircleShape2D_y1tmr")
action = "ui_accept"

[node name="TouchScreenButtonSTART" type="TouchScreenButton" parent="."]
top_level = true
position = Vector2(93, 452)
shape = SubResource("CircleShape2D_y1tmr")
action = "ui_accept"

[node name="TouchScreenButtonSELECT" type="TouchScreenButton" parent="."]
top_level = true
position = Vector2(141, 451)
shape = SubResource("CircleShape2D_y1tmr")
action = "ui_accept"
